fix text-align

--- a/frontend/ui/src/components/WriteReviewForm/SearchPlaceModal/SearchPlaceModal.module.scss
+++ b/frontend/ui/src/components/WriteReviewForm/SearchPlaceModal/SearchPlaceModal.module.scss
@@ -79,6 +79,9 @@
   }
 
   &__address {
+    text-align: left;
+    word-break: keep-all;
+
     @include mixins.text-sm;
   }
 }
